fix swag doc
